Can now fetch schema objects, still dosent display them

--- a/app/src/main/res/layout/content_parse_app.xml
+++ b/app/src/main/res/layout/content_parse_app.xml
@@ -8,10 +8,9 @@
     tools:context="com.galtashma.parsedashboard.ParseAppActivity"
     tools:showIn="@layout/activity_parse_app">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
-        android:text="@string/large_text" />
+    <ListView
+        android:id="@+id/list_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
 </android.support.v4.widget.NestedScrollView>
