--- a/app/src/main/res/layout/content_parse_app.xml
+++ b/app/src/main/res/layout/content_parse_app.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,8 +9,9 @@
     tools:showIn="@layout/activity_parse_app">
 
     <ListView
-        android:id="@+id/list_view"
+        android:id="@+id/list_view_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+        android:layout_gravity="fill_vertical" />
 
-</android.support.v4.widget.NestedScrollView>
+</LinearLayout>
