--- a/app/src/main/res/layout/content_parse_app.xml
+++ b/app/src/main/res/layout/content_parse_app.xml
@@ -12,6 +12,8 @@
         android:id="@+id/list_view_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:divider="#00000000"
+        android:dividerHeight="0dp"
         android:layout_gravity="fill_vertical" />
 
 </LinearLayout>
