--- a/app/src/main/res/layout/content_parse_app.xml
+++ b/app/src/main/res/layout/content_parse_app.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.galtashma.parsedashboard.screens.ParseAppActivity"
+    tools:context="com.galtashma.parsedashboard.screens.AppParseActivity"
     tools:showIn="@layout/activity_parse_app">
 
     <ListView
