--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.galtashma.parsedashboard.screens.AppsMenuParseActivity"
-    tools:showIn="@layout/activity_main">
+    tools:showIn="@layout/activity_apps_menu">
 
 
     <LinearLayout
