--- a/app/src/main/res/layout/content_parse_app.xml
+++ b/app/src/main/res/layout/content_parse_app.xml
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<!-- app:layout_behavior="@string/appbar_scrolling_view_behavior" -->
-<ListView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/list_view_view"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:divider="#00000000"
-    android:dividerHeight="0dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    android:layout_gravity="fill_vertical" />
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+    <ListView xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/list_view_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="#00000000"
+        android:dividerHeight="0dp" />
+
+</LinearLayout>
+
