--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,7 +18,7 @@
 
         <android.support.v7.widget.AppCompatImageView
             android:layout_width="match_parent"
-            android:layout_height="80dp"
+            android:layout_height="@dimen/parse_icon_big"
             android:scaleType="fitCenter"
             app:srcCompat="@drawable/ic_parse_24dp" />
 
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textAlignment="center"
-            android:textSize="40sp"
+            android:textSize="@dimen/text_big_size"
             android:text="@string/empty_state_short"
             />
 
