--- a/app/src/main/res/layout/activity_apps_menu.xml
+++ b/app/src/main/res/layout/activity_apps_menu.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorGray"
     tools:context="com.galtashma.parsedashboard.screens.AppsMenuParseActivity">
 
     <android.support.design.widget.AppBarLayout
@@ -20,7 +21,7 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include layout="@layout/content_main" />
+    <include layout="@layout/stateful_content_layout" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
