--- a/app/src/main/res/menu/menu_class_view.xml
+++ b/app/src/main/res/menu/menu_class_view.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="com.galtashma.parsedashboard.screens.SingleClassParseActivity">
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:title="@string/action_settings"
+        android:id="@+id/action_refresh_class"
+        android:title="@string/action_refresh"
+        android:onClick="onRefresh"
         app:showAsAction="never" />
 </menu>
