Started working on configuring object preview field selection
Now menu click opens dialog with relevant field names

--- a/app/src/main/res/menu/menu_class_view.xml
+++ b/app/src/main/res/menu/menu_class_view.xml
@@ -7,4 +7,10 @@
         android:title="@string/action_refresh"
         android:onClick="onRefresh"
         app:showAsAction="never" />
+
+    <item
+        android:id="@+id/action_select_class_fav_fields"
+        android:title="@string/action_select_fav_fields"
+        android:onClick="onSelectFavFields"
+        app:showAsAction="never" />
 </menu>
