--- a/app/src/main/res/layout/list_item_card.xml
+++ b/app/src/main/res/layout/list_item_card.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         xmlns:card_view="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
         android:id="@+id/card_view"
@@ -22,4 +22,4 @@
             app:liv_multiline="true"
             app:liv_menu="@menu/menu_server_item" />
 
-</android.support.v7.widget.CardView>
+</androidx.cardview.widget.CardView>
